tests/ui/try_transmute-dst-not-tryfrombytes.msrv.stderr
error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/try_transmute-dst-not-tryfrombytes.rs:15:58
    |
15  |     let dst_not_try_from_bytes: Result<NotZerocopy, _> = try_transmute!(AU16(0));
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotZerocopy`
    |
note: required by a bound in `try_transmute`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/src/util/macro_util.rs:513:10
    |
513 |     Dst: TryFromBytes,
    |          ^^^^^^^^^^^^ required by this bound in `try_transmute`
    = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/try_transmute-dst-not-tryfrombytes.rs:15:33
    |
15  |     let dst_not_try_from_bytes: Result<NotZerocopy, _> = try_transmute!(AU16(0));
    |                                 ^^^^^^^^^^^^^^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotZerocopy`
    |
note: required by a bound in `ValidityError`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/src/error.rs:588:45
    |
588 | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/try_transmute-dst-not-tryfrombytes.rs:15:58
    |
15  |     let dst_not_try_from_bytes: Result<NotZerocopy, _> = try_transmute!(AU16(0));
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotZerocopy`
    |
note: required by a bound in `ValidityError`
   --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/src/error.rs:588:45
    |
588 | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`
    = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
